// 使用proto3语法，默认proto2
syntax = "proto3";

// 是否需要生成的类拆分为多个
option java_multiple_files = true;
// 生成的类所属的层级
option java_package = "llm.grpc.agentExecutor";
option java_outer_classname = "AgentExecutorProto";
option objc_class_prefix = "LLM";

// 定义包名，避免命名冲突
package llm;

// 定义服务
service AgentExecutor {
  rpc execAgentTask (execAgentTaskRequest) returns (stream execAgentTaskResponse) {}
}

// 结构化数据：使用message定义。
// 字段类型 字段名 = 字段编号;
message execAgentTaskRequest {
  string agentTaskInfo = 1;
}

message execAgentTaskResponse {
  uint32 handleStatus = 1;
  string logContent = 2;
  string logGroup = 3;
  string handleRet = 4;
  string logExt = 5;
}